# ternary-llm-20b

./: CMakeLists.txt  README.md  requirements.txt
code/: CMakeLists.txt  Makefile  README.md
code/python/: evaluation.py  requirements.txt  setup_training.sh  tokenizer.py  train.py  training_dashboard.py  training_loop.py
code/python/configs/: model_config.yaml  training_config.yaml
include/: ternary_core.hpp
